criação da pagina de login, preciasa colocar a imagem da logo e trocar a imagem de fundo para algo com mais qualidade ou outra imagem por completo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="nav-link" href="cartao.html">Cartão CA</a>
             </li>
             <li>
-                <button class="btn btn-light mx-2">Entrar</button>
+                <a class="btn btn-light mx-2 " href="login.html">Entrar</a>
             </li>
           </ul>
   
